Fix empty button value and contrast issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -400,6 +400,10 @@
             color: blue;
             font-size: 24px;
         }
+
+        .never-display {
+            display: none;
+        }
         
         /* FAQ */
 
